fix(web-components): fixes tooltips wrapping onto multiple lines
tooltips no longer wrap until max width is reached

BREAKING CHANGE: tooltip wrapping change that may affect visual regression snapshots

--- a/packages/web-components/src/components/ic-tooltip/ic-tooltip.css
+++ b/packages/web-components/src/components/ic-tooltip/ic-tooltip.css
@@ -20,6 +20,7 @@
   display: none;
   z-index: var(--ic-z-index-tooltip);
   box-shadow: var(--ic-elevation-overlay);
+  width: max-content;
 }
 
 :host(.ic-tooltip) ic-typography {
